--- a/views/registerpage.jade
+++ b/views/registerpage.jade
@@ -40,7 +40,7 @@ html
       }
 
       #reg input[type='submit'] {
-        background-color: #74ebd5;
+        background-color: #9AC8E4;
         color: white;
         border: none;
         cursor: pointer;
@@ -48,17 +48,17 @@ html
       }
 
       #reg input[type='submit']:hover {
-        background-color: #66d1c8;
+        background-color: #FFA7A6;
       }
 
       #reg a {
         text-decoration: none;
-        color: #74ebd5;
+        color: #9AC8E4;
         font-size: 14px;
       }
 
       #reg a:hover {
-        color: #66d1c8;
+        color: #FFA7A6;
       }
 
   body
